--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,9 +15,9 @@ generate:
     steps:
 
   # step 1: checkout repository code inside the workspace directory of the runner
-  - name: Checkout the repository
+    name: Checkout the repository
     uses: actions/checkout@v2
 
   # step 2: generate build files and dump inside the workspace directory of the runner
-  - name: Generate build files
+    name: Generate build files
     uses: jrewienski/nrf52_build_github_action 
