--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,4 +20,4 @@ jobs:
 
       # step 2: generate build files and dump inside the workspace directory of the runner
       - name: Generate build files
-        uses: jrewienski/nrf52_build_github_action 
+        uses: jrewienski/nrf52_build_github_action@master
