--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,3 +21,11 @@ jobs:
       # step 2: generate build files and dump inside the workspace directory of the runner
       - name: Generate build files
         uses: jrewienski/nrf52_build_github_action@master
+
+      # step 3: Copy build-artifacts in the GitHub release
+      - name: Copy build-artifacts
+        uses: skx/github-action-publish-binaries@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          args: "./pca10059/mbr/armgcc/_build/*.hex"
